--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,43 @@
 @import "tailwindcss"; 
+
+@font-face {
+    font-family: 'ClashDisplay-Bold';
+    src: url('/fonts/ClashDisplay-Bold.otf') format('opentype');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Satoshi-Variable';
+    src: url('/fonts/Satoshi-Variable.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+.h1 {
+    @apply text-3xl md:text-4xl lg:text-4xl font-bold text-white;
+    font-family: 'ClashDisplay-Bold', sans-serif;
+}
+
+.h2 {
+    @apply text-xl md:text-3xl lg:text-3xl font-semibold text-pink-300;
+    font-family: 'ClashDisplay-Semibold', sans-serif;
+}
+
+.h3 {
+    @apply text-xl md:text-2xl lg:text-2xl font-semibold text-white;
+    font-family: 'ClashDisplay-Semibold', sans-serif;
+}
+
+.body {
+    font-family: 'Satoshi-Variable', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.titre {
+    @apply text-5xl md:text-6xl lg:text-6xl font-bold text-white;
+    font-family: 'ClashDisplay-Bold', sans-serif;
+}
