--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -290,6 +290,50 @@ import Layout from "../layouts/Layout.astro";
 					/>
 				</div>
 			</div>
+
+			<!-- Sante territoire Project -->
+			<div
+				class="bg-white/10 backdrop-blur rounded-3xl p-4 md:p-8 mb-6 md:mb-8 flex flex-col lg:flex-row justify-between items-start lg:items-center gap-6 mt-8"
+			>
+				<div class="w-full lg:w-auto">
+					<h3 class="h3 mb-3 md:mb-4 text-2xl md:text-3xl">
+						Santé et territoire
+					</h3>
+					<img
+						src="/src/assets/img/card1.webp"
+						alt="Santé territoire"
+						class="w-full lg:w-auto h-auto lg:h-50 rounded-2xl object-cover mb-4 md:mb-6"
+					/>
+				</div>
+				<div class="max-w-md w-full lg:w-auto">
+					<p class="mb-4 md:mb-6 text-sm md:text-base">
+						BDE (Bureau des étudiants), association étudiante qui
+						organise la vie étudiante d'une école ou université en
+						proposant des événements, activités et services pour
+						créer du lien entre les étudiants.
+					</p>
+					<div class="flex flex-wrap gap-2 md:gap-3 mb-3 md:mb-4">
+						<span
+							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
+							>DESIGN</span
+						>
+						<span
+							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
+							>RÉDACTION</span
+						>
+						<span
+							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
+							>ÉVÉNEMENTIEL</span
+						>
+					</div>
+					<a
+						href="/sante-territoire"
+						class="text-black bg-indigo-300 hover:bg-indigo-400 px-4 md:px-6 py-2 rounded-full transition inline-block text-sm md:text-base"
+					>
+						EN SAVOIR PLUS
+					</a>
+				</div>
+			</div>
 		</section>
 
 		<script>
