--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -300,30 +300,31 @@ import Layout from "../layouts/Layout.astro";
 						Santé et territoire
 					</h3>
 					<img
-						src="/src/assets/img/card1.webp"
+						src="/src/assets/img/mockupsante.webp"
 						alt="Santé territoire"
 						class="w-full lg:w-auto h-auto lg:h-50 rounded-2xl object-cover mb-4 md:mb-6"
 					/>
 				</div>
 				<div class="max-w-md w-full lg:w-auto">
 					<p class="mb-4 md:mb-6 text-sm md:text-base">
-						BDE (Bureau des étudiants), association étudiante qui
-						organise la vie étudiante d'une école ou université en
-						proposant des événements, activités et services pour
-						créer du lien entre les étudiants.
+						Santé et Territoire est un projet mené à partir de
+						données ouvertes (data.gouv.fr) pour analyser et
+						raconter les inégalités de santé par territoire, à
+						travers des cartes et graphiques interactifs intégrés
+						dans un site web clair et accessible.
 					</p>
 					<div class="flex flex-wrap gap-2 md:gap-3 mb-3 md:mb-4">
 						<span
 							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
-							>DESIGN</span
+							>ANALYSE</span
 						>
 						<span
 							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
-							>RÉDACTION</span
+							>REPRÉSENTATION</span
 						>
 						<span
 							class="border-3 border-indigo-300 rounded-full px-3 md:px-4 py-1 text-xs md:text-sm"
-							>ÉVÉNEMENTIEL</span
+							>DÉVELOPPEMENT</span
 						>
 					</div>
 					<a
