--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -203,7 +203,7 @@ import Layout from "../layouts/Layout.astro";
             <!-- Bouton CV -->
             <div class="text-center">
                 <a
-                    href="/src/assets/cv/CV_Juline_ADAM.pdf"
+                    href="/CV_Juline_ADAM.pdf"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="inline-flex items-center gap-3 bg-indigo-300 hover:bg-indigo-400 text-black px-6 md:px-8 py-3 rounded-full transition font-medium text-sm md:text-base"
